--- a/configs/nginx-cif.conf
+++ b/configs/nginx-cif.conf
@@ -8,6 +8,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://127.0.0.1:5000/$1?$args;
     }
+    location / {
+        root /opt/cif/www;
+    }
 }
 server {
     listen 443;
@@ -21,5 +24,8 @@ server {
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://127.0.0.1:5000/$1?$args;
+    }
+    location / {
+        root /opt/cif/www;
     }
 }
